--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/* body {
-    display: flex;
-} */
+
 
 .table {
     display: flex;
@@ -8,7 +6,6 @@
 
 #table1 {
     margin-left: 20px;
-
 }
 
 th {
@@ -28,4 +25,10 @@ td {
 
 .span {
     border: 2px solid green;
+}
+
+#hr24 th {
+    border: 1px solid purple;
+    width: 20px;
+    height: 20px;
 }
