--- a/style.css
+++ b/style.css
@@ -44,22 +44,43 @@ body {
     transform:  rotateY(360deg);
     transform-style: preserve-3d;
     transition: 5000ms;
+    animation-iteration-count: infinite;
 }
 
 .table {
+    /* height: 90vh; */
+    /* overflow-x: hidden; */
+    display: flex ;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#table24 {
+    /* margin: 0;
+    padding: 0; */
     height: 90vh;
     overflow-x: hidden;
-    display: flex;
-    justify-content: center;
+    margin-bottom: 1rem;
+    border: 2px solid red;
+    padding: 5px;
 }
 
-#table {
-    margin: 0;
-    padding: 0;
-}
+#table24::-webkit-scrollbar {
+    width: 7px;
+    background-color: #f9f9fd;
+  }
 
-#table1 {
-    /* margin-left: 20px; */
+#table24::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #18aaaa;
+  }
+
+#table15 {
+    margin-left: 20px;
+    height: 90vh;
+    overflow-y: auto;
+    margin-bottom: 1rem;
+
 }
 
 th {
@@ -69,6 +90,11 @@ th {
     color: white;
     /* position: sticky; */
 }
+
+#table24 tr:first-child {
+    position: sticky;
+}
+
 
 td {
     font-size: 14px;
