--- a/style.css
+++ b/style.css
@@ -65,6 +65,16 @@ body {
     padding: 5px;
 }
 
+#table15 {
+    /* margin: 0;
+    padding: 0; */
+    height: 90vh;
+    overflow-x: hidden;
+    margin-bottom: 1rem;
+    border: 2px solid red;
+    padding: 5px;
+}
+
 #table24::-webkit-scrollbar {
     width: 7px;
     background-color: #f9f9fd;
@@ -75,13 +85,15 @@ body {
     background-color: #18aaaa;
   }
 
-#table15 {
-    margin-left: 20px;
-    height: 90vh;
-    overflow-y: auto;
-    margin-bottom: 1rem;
+#table15::-webkit-scrollbar {
+    width: 7px;
+    background-color: #f9f9fd;
+  }
 
-}
+#table15::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #18aaaa;
+  }
 
 th {
     font-size: 14px;
