--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     justify-content: center;
     display: flex;
     perspective: 500px;
+    margin-bottom: 0.5rem;
 }
 
 .header span {
@@ -56,8 +57,7 @@ body {
 }
 
 #table24 {
-    /* margin: 0;
-    padding: 0; */
+    margin: 0.5rem;
     height: 90vh;
     overflow-x: hidden;
     margin-bottom: 1rem;
@@ -66,8 +66,7 @@ body {
 }
 
 #table15 {
-    /* margin: 0;
-    padding: 0; */
+    margin: 0.5rem;
     height: 90vh;
     overflow-x: hidden;
     margin-bottom: 1rem;
@@ -126,4 +125,28 @@ td {
     border: 1px solid purple;
     width: 20px;
     height: 20px;
+}
+
+.time {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 0.5rem;
+    text-decoration: none;
+    color: yellow;
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 30px; /* Настройте размер шрифта по вашему усмотрению */
+    }
+    .header span {
+        font-size:1.5rem; /* Настройте размер шрифта для заголовка */
+    }
+    #table15 td {
+        font-size: 0.9rem; /* Настройте размер шрифта для таблиц */
+    }
+    footer .time {
+        font-size: 1.2rem; /* Настройте размер шрифта для футера */
+    }
 }
